<resources>
    <string name="app_name">Food Delivery</string>
    <string name="nameApp">Waves Of Food</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="author">Design By\nNeatRoots</string>
    <string name="enjoy_restaurant">Enjoy Restaurant Quality Meals\nat Home</string>
    <string name="next">Next</string>
    <string name="email_or_phone">Email or Phone number</string>
    <string name="password">Password</string>
    <string name="login_to_account">Login To Your Account</string>
    <string name="continue_with">or\nContinue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="sign_up">Or\nSign Up Here</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_ocation">Choose Your Location</string>
    <string name="your_street">Your street</string>
    <string name="for_courier">For courier</string>
    <string name="is_private_house">Is private house?</string>
    <string name="your_apartment">Your apartment</string>
    <string name="apartment">Apartment</string>
    <string name="private_house">Private house</string>
    <string-array name="cities_of_Kazakhstan">
        <item>Qostanai</item>
        <item>Astana</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <string name="banner_template">BANNER TEMPLATE</string>
    <string name="banner">banner</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="add_to_cart">Add To Cart</string>
</resources>