<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/nameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameApp"
            android:textSize="40sp"
            android:fontFamily="@font/yeonsung"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <TextView
            android:id="@+id/afterNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliver_favorite_food"
            android:textStyle="bold"
            android:textColor="@color/greenEnd"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/nameApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_account"
            android:textColor="@color/greenEnd"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/afterNameApp"
            android:layout_marginTop="24dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_login"
            android:elevation="1dp"
            android:shadowColor="#5A6CEA"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_back"
            android:minHeight="50dp"
            android:padding="15dp"
            android:inputType="text"
            android:textSize="15sp"
            android:textColorHint="@color/blackBrown"
            android:hint="@string/email_or_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            android:layout_marginTop="25dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_password"
            android:elevation="1dp"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_back"
            android:minHeight="50dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textColorHint="@color/blackBrown"
            android:hint="@string/password"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_login" />

        <TextView
            android:id="@+id/or_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with"
            android:textAlignment="center"
            android:fontFamily="@font/yeonsung"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_password"
            android:layout_marginTop="17dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_with_google"
            android:layout_width="150dp"
            android:layout_height="57dp"
            android:background="@drawable/edit_text_back"
            android:drawableStart="@drawable/google"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.616"
            app:layout_constraintStart_toEndOf="@id/login_with_facebook"
            app:layout_constraintTop_toBottomOf="@id/or_login"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_with_facebook"
            android:layout_width="150dp"
            android:layout_height="57dp"
            android:background="@drawable/edit_text_back"
            android:drawableStart="@drawable/facebook"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:text="@string/facebook"
            app:layout_constraintEnd_toStartOf="@+id/login_with_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_login"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="57dp"
            android:background="@drawable/btn_gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_with_facebook"
            android:text="@string/login"
            android:fontFamily="@font/yeonsung"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <ProgressBar
            android:id="@+id/progress_create_account"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_with_facebook"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/btn_create_acc"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_account"
            android:textAllCaps="false"
            android:textColor="@color/greenEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:fontFamily="@font/yeonsung"
            android:textSize="16sp"
            android:textColor="@color/greenEnd"
            app:layout_constraintTop_toBottomOf="@id/btn_create_acc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>