<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SplashScreen">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nameApp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameApp"
        android:textSize="40sp"
        android:fontFamily="@font/yeonsung"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/afterNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_favorite_food"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/nameApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:fontFamily="@font/yeonsung"
        android:textSize="16sp"
        android:textColor="@color/greenEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>