<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ActivityStart">

    <ImageView
        android:id="@+id/imgBurger"
        android:layout_width="330dp"
        android:layout_height="310dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burgerr" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_restaurant"
        android:fontFamily="@font/yeonsung"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/greenStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBurger"
        android:layout_marginTop="32dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartLogin"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/yeonsung"
        android:textSize="16sp"
        android:background="@drawable/btn_gradient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/author"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:fontFamily="@font/yeonsung"
        android:textSize="16sp"
        android:textColor="@color/greenEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>