<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

        <TextView
            android:id="@+id/tv_choose_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_ocation"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:fontFamily="@font/yeonsung"
            android:layout_marginTop="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_of_cities"
            app:layout_constraintBottom_toTopOf="@id/author"
            android:paddingTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/street_of_user"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_back"
                android:hint="@string/your_street"
                android:paddingStart="20dp"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_private_house"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@id/space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/street_of_user"
                android:padding="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/private_house"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/btn_gradient"
                android:layout_marginTop="10dp"/>

            <Space
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_apartment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/street_of_user"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/apartment"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:background="@drawable/btn_white"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_apartment_of_user"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_back"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:hint="@string/your_apartment"
                android:paddingStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_private_house" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start_delivery"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:text="@string/next"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/yeonsung"
                android:textSize="16sp"
                android:background="@drawable/btn_gradient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"/>

            <ProgressBar
                android:id="@+id/progress_bar_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/btn_start_delivery"
                app:layout_constraintEnd_toEndOf="@id/btn_start_delivery"
                app:layout_constraintTop_toTopOf="@id/btn_start_delivery"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Spinner
            android:id="@+id/spinner_of_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/cities_of_Kazakhstan"
            android:spinnerMode="dialog"
            style="@style/spinner_style"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_location" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:fontFamily="@font/yeonsung"
            android:textSize="16sp"
            android:textColor="@color/greenEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
